<resources>
    <string name="app_name">Identity Manager</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="generate_identity">Create an ID</string>
    <string name="trace_identity">Trace all identities</string>
    <string name="debug_button">Debug</string>

    <string name="title_activity_generate_token">Create an ID</string>
    <string name="title_activity_generate_identity">Request confirmation</string>
    <string name="dialog_title">Message</string>
    <string name="submit">Submit</string>
    <string name="confirm">OK</string>
    <string name="token_success">Please check your mailbox with further instructions how to proceed.</string>
    <string name="token_fail">Token request failed.</string>
    <string name="email">Email address:</string>
    <string name="identity_caption">ID Name:</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="profile_picture_hint">Select the profile picture</string>
    <string name="email_confirmation_hint">Waiting for email confirmation</string>
    <string name="button_continue">Continue</string>
    <string name="button_back">Back</string>

    <string name="ndncert_success">Successfully downloaded the cert.</string>

    <string name="title_activity_submit_identity_request">Submit Identity Request</string>
    <string name="name">Full Name:</string>
    <string name="homepage">Homepage URL (optional):</string>
    <string name="organization">Organization:</string>
    <string name="department">Department/Group (optional):</string>
    <string name="advisor">Advisor Name (optional):</string>
    <string name="certification">NDN certification request:</string>
    <string name="name_fail">Full Name field cannot be empty</string>
    <string name="certificate_fail">Incorrectly generated NDN certificate request, please try again</string>
    <string name="submit_success">Your request for NDN certificate has been received. Your request will be processed and you should receive an email when your certificate is generated.</string>
    <string name="submit_fail">Incorrectly generated NDN certificate request, please try again.</string>
    <string name="please_wait">Please wait...</string>

    <string name="title_activity_uri_handler">Identity Manager</string>

    <string name="title_activity_display_identities">Display Identities</string>

    <string name="title_activity_install_certificate">Install Certificate</string>
    <string name="okay">OK</string>

    <string name="title_activity_display_apps">Display Apps</string>

    <string name="title_activity_sign_certificate">Identity Manager</string>
    <string name="title_activity_authorize_app">AuthorizeApp</string>

    <string name="tags_if_taken"></string>
    <string name="tags_id_name"></string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
