<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ndn.jwtan.identitymanager.UICreateOpenmHealthIDPictureSelect">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/buttonInfoBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1"
            android:onClick="tab1Click" />

        <Button
            android:id="@+id/submitEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submitEmail"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="302dp"
        android:layout_height="328dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView"
            android:layout_gravity="left|top"
            android:background="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView2"
            android:layout_gravity="center_horizontal|top"
            android:background="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView3"
            android:layout_gravity="right|top"
            android:background="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView4"
            android:layout_gravity="left|center_vertical"
            android:background="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView5"
            android:layout_gravity="center"
            android:background="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView6"
            android:layout_gravity="right|center_vertical"
            android:background="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView7"
            android:layout_gravity="left|bottom"
            android:background="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView8"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="102dp"
            android:id="@+id/imageView9"
            android:layout_gravity="right|bottom"
            android:background="@mipmap/ic_launcher" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/profile_picture_hint"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal|top" />

</FrameLayout>
